[gd_scene load_steps=8 format=3 uid="uid://ctrnajsia6kgq"]

[ext_resource type="Script" path="res://scenes/enemies/mob.gd" id="1_ea2p5"]
[ext_resource type="Texture2D" uid="uid://bbdnpa3bgtncs" path="res://scenes/player/player_square.png" id="1_erc5a"]
[ext_resource type="Script" path="res://components/health_component.gd" id="3_svw5e"]
[ext_resource type="Script" path="res://scenes/enemies/wander.gd" id="4_5mskb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_knqd7"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cndev"]
size = Vector2(12, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nv4fk"]
size = Vector2(12, 10)

[node name="Mob" type="CharacterBody2D"]
script = ExtResource("1_ea2p5")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.85098, 0, 0.270588, 1)
texture_filter = 1
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_erc5a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_knqd7")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_svw5e")
max_health = 1

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_cndev")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_nv4fk")

[node name="Wander" type="Node" parent="."]
script = ExtResource("4_5mskb")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="health_depleted" from="HealthComponent" to="." method="_on_health_component_health_depleted"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
